# MineFlow

./: .gitignore  CMakeLists.txt
include/: mineflow.hpp
lib/: CMakeLists.txt  dependencies.txt
src/: mineflow.cpp
tests/: testClock.c  testClock.h
tests/kd/: test_pseudoflow_kd.cpp
tests/marvin/: test_pseudoflow_marvin.cpp
tests/mclaughlin/: .gitignore  mclaughlin.upit.7z  test_pseudoflow_mclaughlin.cpp
tests/mclaughlin_limit/: mclaughlin_limit.upit  test_pseudoflow_mclaughlin_limit.cpp
tests/newman1/: test_pseudoflow_newman1.cpp
tests/p4hd/: p4hd.upit  test_pseudoflow_p4hd.cpp
tests/sm2/: sm2.prec  sm2.upit  test_pseudoflow_sm2.cpp
tests/w23/: test_pseudoflow_w23.cpp  w23.upit
tests/zuck_large/: test_pseudoflow_zuck_large.cpp  zuck_large.upit
tests/zuck_medium/: test_pseudoflow_zuck_medium.cpp  zuck_medium.upit
tests/zuck_small/: test_pseudoflow_zuck_small.cpp
